# cmake_proj

./: README
cmake/: CMakeLists.txt
cmake/src/: CMakeLists.txt
cmake/src/cvpart/: CMakeLists.txt
cmake/src/main/: CMakeLists.txt
cmake/src/start/: CMakeLists.txt
cvpart/: FaceReconition.cpp
include/: FaceReconition.hpp  README  Start.h
main/: main.cpp
start/: Start.cpp
